kubernetes/services/plantuml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantuml
  namespace: plantuml
spec:
  selector:
    app: plantuml
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
