kubernetes/services/plantuml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plantuml
  namespace: plantuml
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Development
    gethomepage.dev/name: PlantUML
    gethomepage.dev/icon: plantuml.png
    gethomepage.dev/description: Text-based diagrams
    gethomepage.dev/weight: "200"
    gethomepage.dev/siteMonitor: http://plantuml.plantuml.svc.cluster.local
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - puml.radunenu.com
      secretName: puml-radunenu-com-tls
  rules:
    - host: puml.radunenu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plantuml
                port:
                  number: 80
